# r-toml

./: .editorconfig  Cargo.toml  LICENSE  r-toml.sln  readme.md
benches/: rust_benchmark.rs
src/r-toml/: Automata.fs  Library.fs  r-toml.fsproj
src/r-toml-rust/: lib.rs
src/r-toml.benchmarks/: Program.fs  disassembly.txt  r-toml.benchmarks.fsproj
src/r-toml.tests/: Program.fs  r-toml.tests.fsproj
