[package]
name = "r-toml"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Regular subset of TOML"
repository = "https://github.com/ieviev/r-toml/tree/main"
readme = "./readme.md"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
bench = true
crate-type = ['rlib', 'staticlib']
path = "src/r-toml-rust/lib.rs"

[dev-dependencies]
criterion = "0.5.1"
toml = "0.8.20"

[[bench]]
name = "rust_benchmark"
harness = false

